# sEMG

./: README.md  config.yaml  launch_tensorboard.bat  model.py  model2esp.py  onnx2ncnn.txt  pt2onnx.py  sEMG.py  wifi_connect.py
C++/: CmakeLists.txt  cmake_command  conanfile.py  partitions.csv  sEMG.cpp
C++/main/: CMakeLists.txt  app_main.cpp
C++/main/models/s3/: sEMG.espdl
